--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
+<!-- Added accessibility feature: Proper language declaration -->
 <html lang="en">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <!-- Added accessibility feature: Proper viewport for responsive design -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <!-- Added accessibility feature: Descriptive meta description -->
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="AI Analytics Dashboard - Track and visualize AI innovation trends with secure authentication and interactive charts"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -24,7 +27,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <!-- Added accessibility feature: Descriptive page title -->
+    <title>AI Analytics Dashboard - Innovation Tracking</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
